--- a/HeartOfGold/Views/Request/RequestForm.cshtml
+++ b/HeartOfGold/Views/Request/RequestForm.cshtml
@@ -1,37 +1,106 @@
 ﻿@model HeartOfGold.Models.Request
+@using Microsoft.AspNet.Identity;
 
 @{
     ViewBag.Title = "Submit Request";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h3>Submit a Request</h3>
-<hr />
-<p class="lead">Let us know what you need</p>
-@using (Html.BeginForm("Save", "Request"))
-{
-
-<div class="well well-lg bg-info well-width">
-        <div class="form-group">
-            @Html.LabelFor(m => m.StudentNumber)
-            @Html.TextBoxFor(m => m.StudentNumber, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Description)
-            @Html.TextAreaFor(m => m.Description, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Date)
-            @Html.TextBoxFor(m => m.Date, new { @class = "form-control", @Value = DateTime.Now.ToShortDateString(), @readonly = "readonly" })
-        </div>
-
-        @Html.HiddenFor(m => m.Id)
-
-        <div class="form-group">
-            <button type="submit" class="btn btn-primary register-button">
-                <i class="fas fa-check"></i>&nbsp;&nbsp;Submit Request
-            </button>
-        </div>
+<div class="center">
+    <h3>Submit a Request</h3>
+    <hr />
+    <p class="lead">Let us know what you need</p>
 </div>
+
+<div class="row">
+    <div class="col-md-4">
+        <div class="panel panel-default">
+            <div class="panel-heading">Things to remember:</div>
+            <div class="panel-body">
+                <ol>
+                    <li>You are allowed to submit one request per day.</li>
+                    <li>Indicate clearly what you are looking for.</li>
+                    <li>Remember to bring your student card when collecting a donation.</li>
+                </ol>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-4 col-md-4 col-lg-4">
+        @using (Html.BeginForm("Save", "Request", FormMethod.Post))
+        {
+            @Html.AntiForgeryToken()
+            <div class="panel panel-default">
+                <div class="panel-heading">New Request</div>
+                <div class="panel-body" id="request">
+                <div class="form-group">
+                    @Html.LabelFor(m => m.StudentNumber, new { @class = "bold-text" })
+                    @Html.TextBoxFor(m => m.StudentNumber, new { @class = "form-control", @Value = User.Identity.GetUserName(), @readonly = "readonly" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Description, new { @class = "bold-text" })
+                    @Html.TextAreaFor(m => m.Description, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.Description)
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Date, new { @class = "bold-text" })
+                    @Html.TextBoxFor(m => m.Date, new { @class = "form-control", @Value = DateTime.Now.ToShortDateString(), @readonly = "readonly" })
+                </div>
+
+                @Html.HiddenFor(m => m.Id)
+
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary register-button">
+                        <i class="fas fa-check"></i>&nbsp;&nbsp;Submit Request
+                    </button>
+                </div>
+</div>
+            </div>
+        }
+
+    </div>
+    <div class="col-md-4">
+        <div class="panel panel-default">
+            <div class="panel-heading">Placeholder</div>
+            <div class="panel-body">
+                
+            </div>
+        </div>
+    </div>
+</div>
+<hr/>
+
+
+@section scripts 
+{
+    @Scripts.Render("~/bundles/jqueryval")
+    
+    
+    @*@if (ViewBag != null)
+    {
+        <script type="text/javascript">
+            $(document).ready(function () {
+                toastr.options = {
+                    "closeButton": true,
+                    "debug": false,
+                    "newestOnTop": false,
+                    "progressBar": true,
+                    "positionClass": "toast-top-left",
+                    "preventDuplicates": false,
+                    "onclick": null,
+                    "showDuration": "300",
+                    "hideDuration": "1000",
+                    "timeOut": "5000",
+                    "extendedTimeOut": "1000",
+                    "showEasing": "swing",
+                    "hideEasing": "linear",
+                    "showMethod": "fadeIn",
+                    "hideMethod": "fadeOut"
+                }
+                toastr.success('Added')
+            });
+        </script>*@
+    }
 }
+
 
