Fixed validation issue with ModelState
- various front-end improvements

--- a/HeartOfGold/Views/Item/Edit.cshtml
+++ b/HeartOfGold/Views/Item/Edit.cshtml
@@ -2,7 +2,7 @@
 @{
     /**/
 
-    ViewBag.Title = "New Donation";
+    ViewBag.Title = "Edit Donation";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -23,7 +23,7 @@
             </li>
             <li class="active">
                 <i class="far fa-save"></i>
-                &nbsp;New Donation
+                &nbsp;Edit Donation
             </li>
         </ol>
     </div>
@@ -32,9 +32,9 @@
 
 
 <div class="container center">
-    <h3>New Donation</h3>
+    <h3>Edit Donation</h3>
     <hr />
-    <p class="lead">Record a donation on the system</p>
+    <p class="lead">Update a donation on the system</p>
 </div>
 
 
