--- a/HeartOfGold/Views/Request/RequestForm.cshtml
+++ b/HeartOfGold/Views/Request/RequestForm.cshtml
@@ -74,7 +74,7 @@
     @*@Scripts.Render("~/bundles/jqueryval")*@
     
     
-    @*@if (ViewBag != null)
+    @*@@if (ViewBag != null)
     {
         <script type="text/javascript">
             $(document).ready(function () {
