--- a/HeartOfGold/Views/Shared/_Layout.cshtml
+++ b/HeartOfGold/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
             <div class="navbar-collapse collapse navbar-fontsize center" style="font-size:1.1em">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Inventory", "Index", "Item")</li>
-                    <li>@Html.ActionLink("Student Requests", "SubmitRequest", "Request")</li>
+                    <li>@Html.ActionLink("Student Requests", "Index", "Request")</li>
                     <li>@Html.ActionLink("Donors", "Index", "Donors")</li>
                     <li>@Html.ActionLink("Our Mission", "About", "Home")</li>
                     <li>@Html.ActionLink("Need help?", "ViewHelp", "Help")</li>
