--- a/HeartOfGold/Views/Item/Index.cshtml
+++ b/HeartOfGold/Views/Item/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<HeartOfGold.Models.Item>
 
+
 @{
     ViewBag.Title = "Donation Inventory";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -34,7 +35,7 @@
 <br />
 <br />
 
-<table id="Inventory" class="table table-striped table-hover">
+<table id="Inventory" class="table table-condensed table-hover">
     <thead>
         <tr style="background-color:#e6e6e6 ">
             <th>Donation</th>
@@ -60,8 +61,9 @@
     </tbody>
 </table>
 
-    <br />
-    <hr />
+
+<br />
+<hr />
 
 @section scripts
 {
@@ -70,7 +72,7 @@
         $(document).ready(function () {
             $("#Inventory").DataTable();
         })
-  
+
         //$('#inventory').dataTable({
         //    ajax: {
         //        url: "/api/donations",
