--- a/HeartOfGold/Views/Shared/_Layout.cshtml
+++ b/HeartOfGold/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
 
-    <link href="~/Content/DataTables/css/jquery.dataTables.min.css" rel="stylesheet" />
+    @*<link href="~/Content/DataTables/css/jquery.dataTables.min.css" rel="stylesheet" />*@
 
 </head>
 <body>
@@ -59,7 +59,7 @@
 
 
 
-    <div class="navbar navbar-inverse navbar-color footer-bottom">
+    <div class="navbar navbar-inverse navbar-color navbar-fixed-bottom container-fluid">
         <div class="navbar-collapse collapse navbar-fontsize center">
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Contact Us", "About", "Home")</li>
@@ -69,7 +69,7 @@
     </div>
 
 
-    <script src="~/Scripts/DataTables/jquery.dataTables.min.js"></script>
+    @*<script src="~/Scripts/DataTables/jquery.dataTables.min.js"></script>*@
 
     @RenderSection("scripts", required: false)
 </body>
