--- a/HeartOfGold/Views/Home/Index.cshtml
+++ b/HeartOfGold/Views/Home/Index.cshtml
@@ -8,12 +8,12 @@
 <hr />
 
 <div class="container text-center">
-    <h2>Are you a student? Are you struggling?</h2>
+    <h3>Are you a student? Are you struggling?</h3>
     <p class="lead">Create a request for items that you need. You will be notified when we can help you.</p>
     <br />
     <a href="@Url.Action("SubmitRequest", "Request")" class="btn btn-primary btn-lg register-button">
         <i class="fas fa-address-card" style="font-size:1.1em"></i>
-        &nbsp;&nbsp;Submit a request!
+        &nbsp;&nbsp;Submit a request
     </a>
 </div>
 <br />
