--- a/HeartOfGold/Views/Reports/Index.cshtml
+++ b/HeartOfGold/Views/Reports/Index.cshtml
@@ -11,3 +11,60 @@
         <hr />
     </div>
 </div>
+
+<div class="row">
+    <div class="col-md-8 col-md-offset-2">
+        <canvas id="myChart"></canvas>
+    </div>
+</div>
+
+@section scripts
+{
+    <script type="text/javascript">
+        var datachart = {
+            labels: [],
+            datasets: [
+                {
+                    label: "Quantity",
+                    backgroundColor: "rgba(215,220,67,0.3)",
+                    borderColor: "rgba(220,220,220,0.7)",
+                    borderWidth: 1,
+                    hoverBackgroundColor: "rgba(220,220,220,1)",
+                    hoverBorderColor: "rgba(220,220,220,0.5)",
+                    data: []
+                },
+                {
+                    label: "Month",
+                    backgroundColor: "rgba(215,220,67,0.3)",
+                    borderColor: "rgba(220,220,220,0.7)",
+                    borderWidth: 1,
+                    hoverBackgroundColor: "rgba(220,220,220,1)",
+                    hoverBorderColor: "rgba(220,220,220,0.5)",
+                    data: []
+                }
+            ]
+        };
+
+        $.getJSON("/Reports/GetChartData", function (data) {
+            $.each(data, function (i, item) {
+                datachart.labels.push(item.Month);
+                datachart.datasets[0].data.push(item.Quantity);
+                datachart.datasets[1].data.push(item.Month);
+            })
+
+            var ctx = document.getElementById("myChart").getContext("2d");
+
+            var myBarChart = new Chart(ctx,
+                {
+                    type: 'bar',
+                    data: datachart,
+                    options: {}
+                });
+        });
+
+
+    </script>
+
+
+
+}
