--- a/HeartOfGold/Views/Request/ViewMyRequests.cshtml
+++ b/HeartOfGold/Views/Request/ViewMyRequests.cshtml
@@ -10,7 +10,11 @@
 <br />
 <hr />
 
-@if(!Model.Any())
+@if (Model.Any())
+{
+
+}
+else
 {
     <p>You currently have not submitted any requests!</p>
 }
