--- a/HeartOfGold/Content/MyCss.css
+++ b/HeartOfGold/Content/MyCss.css
@@ -149,9 +149,50 @@
 }
 
 .alert-info {
-    background-color: #5b7b9a;
+    background-color: #828282
 }
 
+.note-heading {
+    position: relative;
+    text-align: center;
+}
 
+    .note-heading:before {
+        content: "";
+        display: block;
+        border-top: solid 2px #bebebe;
+        width: 100%;
+        height: 2px;
+        position: absolute;
+        top: 50%;
+        z-index: 0;
+    }
 
+    .note-heading span {
+        background: #f5f5f5;
+        padding: 0 10px;
+        position: relative;
+        z-index: 1;
+    }
 
+.panel {
+    border-radius: 6px;
+}
+
+.panel-default > .panel-heading {
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+}
+
+#loginDiv {
+    background-color: #e6e6e6;
+    border-radius: 6px;
+}
+
+#btnLogin {
+    width: 40%
+}
+
+#loginForm {
+    margin-left: 9%;
+}
