--- a/HeartOfGold/Views/Item/ItemForm.cshtml
+++ b/HeartOfGold/Views/Item/ItemForm.cshtml
@@ -86,7 +86,7 @@
     <div class="row">
         <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12 col-offset-xs-0">
 
-            <div class="alert alert-dismissible alert-success">
+            <div class="alert alert-dismissible alert-success" id="Alert">
                 <button type="button" class="close" data-dismiss="alert">&times;</button>
                 Successfully added donation.
             </div>
@@ -105,6 +105,21 @@
 @section scripts
 {
     @Scripts.Render("~/bundles/jqueryval")
+
+    <script>
+        $(document).ready(function () {
+            $("#Alert").hide();
+        });
+    </script>
+
+    @if(ViewBag.Added != null)
+    {
+        <script>
+            $(document).ready(function () {
+                $("#Alert").show();
+            });
+        </script>
+    }
 
     @*<script>
             $(document).ready(function () {
